test/resources/azure-nsg-list-response.json
[
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
    "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg",
    "location": "australiaeast",
    "name": "aks-agentpool-33686480-nsg",
    "networkInterfaces": null,
    "provisioningState": "Succeeded",
    "resourceGroup": "cattle",
    "resourceGuid": "deadbeef-b0d0-4691-a8aa-deadbeefdead",
    "securityRules": [
      {
        "access": "Allow",
        "description": "Allow SSH traffic to master",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "22-22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/securityRules/allow_ssh",
        "name": "allow_ssh",
        "priority": 101,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": "Allow kube-apiserver (tls) traffic to master",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "443-443",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/securityRules/allow_kube_tls",
        "name": "allow_kube_tls",
        "priority": 100,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": null,
        "destinationAddressPrefixes": "10.100.101.102",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/securityRules/ac03831049d0411e8942dbaa0ddf06b9-TCP-80-Internet",
        "name": "ac03831049d0411e8942dbaa0ddf06b9-TCP-80-Internet",
        "priority": 500,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": null,
        "destinationAddressPrefix": "10.100.234.139",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "443",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/securityRules/ac03831049d0411e8942dbaa0ddf06b9-TCP-443-Internet",
        "name": "ac03831049d0411e8942dbaa0ddf06b9-TCP-443-Internet",
        "priority": 501,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": null,
        "destinationAddressPrefix": "10.100.237.91",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/securityRules/ac052e5969d0411e8942dbaa0ddf06b9-TCP-80-Internet",
        "name": "ac052e5969d0411e8942dbaa0ddf06b9-TCP-80-Internet",
        "priority": 502,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": null,
        "destinationAddressPrefix": "10.100.237.91",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "443",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/securityRules/ac052e5969d0411e8942dbaa0ddf06b9-TCP-443-Internet",
        "name": "ac052e5969d0411e8942dbaa0ddf06b9-TCP-443-Internet",
        "priority": 503,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": null,
        "destinationAddressPrefix": "10.100.237.91",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "31400",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"deadbeef-c6f3-4a7e-84f2-deadbeef8e2\"",
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-33686480-nsg/securityRules/ac052e5969d0411e8942dbaa0ddf06b9-TCP-31400-Internet",
        "name": "ac052e5969d0411e8942dbaa0ddf06b9-TCP-31400-Internet",
        "priority": 504,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "cattle",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "addressPrefix": null,
        "etag": null,
        "id": "/subscriptions/deadbeef-73a9-44e3-b70f-ee9206029c60/resourceGroups/cattle/providers/Microsoft.Network/virtualNetworks/aks-vnet-33686480/subnets/aks-subnet",
        "ipConfigurations": null,
        "name": null,
        "networkSecurityGroup": null,
        "provisioningState": null,
        "resourceGroup": "cattle",
        "resourceNavigationLinks": null,
        "routeTable": null,
        "serviceEndpoints": null
      }
    ],
    "tags": null,
    "type": "Microsoft.Network/networkSecurityGroups"
  }
]
